# studio45_hackathon

./: .gitmodules  README.md
dev_ws/src/hello/: CMakeLists.txt  package.xml
dev_ws/src/hello/src/: hello_node.cpp
dev_ws/src/movexy/: package.xml  setup.cfg  setup.py
dev_ws/src/movexy/movexy/: node.py
dev_ws/src/planner/: CMakeLists.txt  README.md  package.xml
dev_ws/src/planner/include/xarm_planner/: xarm_planner.h
dev_ws/src/planner/launch/: _robot_planner.launch.py  planner.launch.py
dev_ws/src/planner/src/: planner.cpp  xarm_planner.cpp
speech/: .env.sample  main.py  parse_command.py  play_audio.py  record_command.py  requirements.txt  wake_word_listener.py
speech/vision/: __init__.py
vision/: pyproject.toml  vision.py
